[build-system]
# grpcio-tools is a *build* dep: the wheel build hook (hatch_build.py) generates the gRPC stubs from
# the vendored proto so they ship in the wheel (see [tool.hatch.build.targets.wheel] below).
requires = ["hatchling", "grpcio-tools>=1.60"]
build-backend = "hatchling.build"

[project]
# Dist name is `throttlekit-py` (PyPI `throttlekit` is an unrelated project); the import name stays
# `throttlekit` — install throttlekit-py, `import throttlekit`.
name = "throttlekit-py"
version = "0.2.1"
description = "Python client for ThrottleKit — distributed rate limiting via gRPC or direct Redis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ameya Borkar" }]
keywords = ["rate-limiting", "grpc", "throttlekit", "gcra", "token-bucket"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]
# grpcio is the gRPC runtime; protobuf is the generated stubs' runtime (grpcio does NOT pull it in,
# and the gencode pins a `>= its own version, same major` floor — see throttlekit_pb2.py's
# ValidateProtobufRuntimeVersion). Both are needed for the ServiceBackend door to import.
dependencies = ["grpcio>=1.60", "protobuf>=6.31.1,<7"]

[project.optional-dependencies]
# The direct RedisBackend is client-agnostic; this pulls a concrete client for convenience/tests.
redis = ["redis>=5"]
dev = ["grpcio-tools>=1.60", "pytest>=8", "ruff>=0.6", "mypy>=1.11", "redis>=5"]

[project.urls]
Homepage = "https://github.com/AmeyaBorkar/throttlekit-py"
"Core (Node)" = "https://www.npmjs.com/package/throttlekit"

[tool.hatch.build.targets.wheel]
packages = ["src/throttlekit"]
# The gRPC stubs are git-ignored (regenerated, not committed). The custom hook generates them at build
# time; `artifacts` force-includes the result past .gitignore so a `pip install` wheel can `import
# ServiceBackend`. Without this the wheel ships stub-less and the service door raises ImportError.
artifacts = ["src/throttlekit/_generated/**/*.py"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["src/throttlekit/_generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# `ruff format` owns code line width; E501 would also flag docstring/string prose the formatter
# deliberately won't break. Disabling it is the standard autoformatter convention.
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/throttlekit"]
exclude = ["src/throttlekit/_generated/"]

[[tool.mypy.overrides]]
# The generated gRPC stubs are not strictly typed; don't fail the strict gate on them.
module = ["throttlekit._generated.*"]
ignore_errors = true
follow_imports = "skip"

[[tool.mypy.overrides]]
# grpcio does not ship type information (no py.typed); don't fail strict on the untyped import.
module = ["grpc", "grpc.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires a running throttlekit-server (and node) — skipped unless available",
  "redis: requires a reachable Redis (THROTTLEKIT_REDIS_URL or localhost:6380) — skipped unless available",
]
