[build-system]
# grpcio-tools is a *build* dep: the wheel build hook (hatch_build.py) generates the gRPC stubs from
# the vendored proto so they ship in the wheel (see [tool.hatch.build.targets.wheel] below).
# PINNED (not `>=`): the generated gencode embeds the build's protoc version and demands a protobuf
# *runtime* >= it. An unpinned floor let the isolated build float to a newer protoc (6.33.5) whose
# gencode out-ran our declared `protobuf>=6.31.1` floor (release smoke caught it pre-publish). ~=1.80.0
# emits protoc-6.31.1 gencode, so codegen is reproducible and matches the runtime floor below.
requires = ["hatchling", "grpcio-tools~=1.80.0"]
build-backend = "hatchling.build"

[project]
# Dist name is `throttlekit-py` (PyPI `throttlekit` is an unrelated project); the import name stays
# `throttlekit` — install throttlekit-py, `import throttlekit`.
name = "throttlekit-py"
version = "0.5.0"
description = "Python client for ThrottleKit — distributed rate limiting via gRPC or direct Redis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ameya Borkar" }]
keywords = ["rate-limiting", "grpc", "throttlekit", "gcra", "token-bucket"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]
# grpcio is the gRPC runtime; protobuf is the generated stubs' runtime (grpcio does NOT pull it in,
# and the gencode pins a `>= its own version, same major` floor — see throttlekit_pb2.py's
# ValidateProtobufRuntimeVersion). Both are needed for the ServiceBackend door to import.
dependencies = ["grpcio>=1.60", "protobuf>=6.31.1,<7"]

[project.optional-dependencies]
# The direct RedisBackend is client-agnostic; this pulls a concrete client for convenience/tests.
redis = ["redis>=5"]
# Framework integrations (throttlekit.contrib.*) — each extra pulls only its own framework.
fastapi = ["fastapi>=0.100"]
starlette = ["starlette>=0.37"]
django = ["django>=4.2"]
flask = ["flask>=2.2"]
# Every runtime integration in one extra (httpx is intentionally omitted — it's a test-only dep for the
# Starlette/FastAPI TestClient, not needed to *run* the adapters).
all = ["redis>=5", "fastapi>=0.100", "starlette>=0.37", "django>=4.2", "flask>=2.2"]
dev = [
  "grpcio-tools~=1.80.0",  # match the pinned build tool so local codegen == the released gencode
  "pytest>=8",
  # Pin ruff exactly: `ruff format` output can shift between releases, so an unpinned floor drifts a
  # locally-clean tree into a red `ruff format --check` on CI (CI installs whatever is newest). Bump
  # deliberately. Same reproducibility reason we pin grpcio-tools above.
  "ruff==0.15.15",
  "mypy>=1.11",
  "redis>=5",
  # the contrib adapters + their in-process test clients (httpx drives the Starlette/FastAPI TestClient)
  "fastapi>=0.100",
  "starlette>=0.37",
  "django>=4.2",
  "flask>=2.2",
  "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/AmeyaBorkar/throttlekit-py"
"Core (Node)" = "https://www.npmjs.com/package/throttlekit"

[tool.hatch.build.targets.wheel]
packages = ["src/throttlekit"]
# The gRPC stubs are git-ignored (regenerated, not committed). The custom hook generates them at build
# time; `artifacts` force-includes the result past .gitignore so a `pip install` wheel can `import
# ServiceBackend`. Without this the wheel ships stub-less and the service door raises ImportError.
artifacts = ["src/throttlekit/_generated/**/*.py"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["src/throttlekit/_generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# `ruff format` owns code line width; E501 would also flag docstring/string prose the formatter
# deliberately won't break. Disabling it is the standard autoformatter convention.
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/throttlekit"]
exclude = ["src/throttlekit/_generated/"]

[[tool.mypy.overrides]]
# The generated gRPC stubs are not strictly typed; don't fail the strict gate on them.
module = ["throttlekit._generated.*"]
ignore_errors = true
follow_imports = "skip"

[[tool.mypy.overrides]]
# grpcio does not ship type information (no py.typed); don't fail strict on the untyped import.
module = ["grpc", "grpc.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The optional web frameworks (throttlekit.contrib.*). Django ships no type info; for the typed ones
# (starlette / fastapi / flask) we deliberately do NOT couple the adapters to their exact, version-
# varying type APIs — `follow_imports = skip` treats every framework symbol as Any (the adapters' real
# correctness is proven by the in-process TestClient round-trips), matching how `grpc` is handled.
module = [
  "fastapi",
  "fastapi.*",
  "starlette",
  "starlette.*",
  "django",
  "django.*",
  "flask",
  "flask.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires a running throttlekit-server (and node) — skipped unless available",
  "redis: requires a reachable Redis (THROTTLEKIT_REDIS_URL or localhost:6380) — skipped unless available",
]
